--- a/src/main/resources/templates/edit_topic.html
+++ b/src/main/resources/templates/edit_topic.html
@@ -46,11 +46,14 @@
                     <form name="topic" th:action="@{/topics/edit/{id}(id=${topic.getId()})}" method="post"
                           th:object="${topic}">
                         <div class="question-title39">
-                            <span class="form-description433">Toppic-Title* </span>
+                            <span class="form-description433">Topic-Title* </span>
                             <label>
                                 <input type="text" name="title" class="question-tile32" th:field="*{title}"
                                        th:value="${topic.getTitle()}">
                             </label>
+                            <div th:if="${#fields.hasErrors('title')}" class="alert alert-danger" role="alert">
+                                <p th:errors="*{title}"></p>
+                            </div>
                         </div>
                         <div class="question-title39">
                             <span class="form-description433">Insert smileys </span>
@@ -141,7 +144,9 @@
                                 <textarea id="content" class="question-textarea" th:field="*{content}"
                                           th:text="${topic.getContent()}">
                                 </textarea>
-
+                                <div th:if="${#fields.hasErrors('content')}" class="alert alert-danger" role="alert">
+                                    <p th:errors="*{content}"></p>
+                                </div>
                             </div>
                         </div>
 
