--- a/src/main/resources/templates/delete-user.html
+++ b/src/main/resources/templates/delete-user.html
@@ -3,21 +3,82 @@
 <head>
   <meta charset="UTF-8">
   <title>Delete User</title>
+  <link href="../static/css/bootstrap.css" rel="stylesheet" type="text/css" th:href="@{/css/bootstrap.css}">
+  <link href="../static/css/style.css" rel="stylesheet" type="text/css" th:href="@{/css/style.css}">
+  <link href="../static/css/animate.css" rel="stylesheet" type="text/css" th:href="@{/css/animate.css}">
+  <link href="../static/css/font-awesome.min.css" rel="stylesheet" type="text/css" th:href="@{/css/font-awesome.min.css}">
+  <style>
+    /* Custom styles for the delete user form */
+    .delete-form-container {
+      max-width: 500px; /* Adjust this value to set the form width */
+      margin: 0 auto;
+      padding: 20px;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      background-color: #f8f8f8;
+    }
 
+    /* Custom styles for the delete button */
+    .delete-button {
+      display: block;
+      width: 100%;
+      padding: 10px;
+      text-align: center;
+      background-color: #ff0000;
+      color: #fff;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+
+    /* Custom styles for the home link container */
+    .home-container {
+      position: absolute;
+      top: 10px;
+      left: 10px;
+    }
+
+    /* Custom styles for the bigger Home link */
+    .bigger-home-link {
+      width: 40px; /* Adjust this value to resize the image */
+      height: 40px;
+    }
+
+    .top-bar {
+      position: absolute;
+      left: 0;
+      right: 0;
+      background-color: #ff7361;
+      padding: 40px;
+      width: 100%;
+      text-align: center;
+    }
+  </style>
 </head>
 <body>
+<!-- Navbar -->
 <div th:replace="fragments/navbar :: navbar"></div>
 
-<h2>Delete User</h2>
-<form th:action="@{/users/delete}" method="post">
-  <label for="id">Enter User ID:</label>
-  <input type="number" id="id" name="id" required>
-  <input type="hidden" name="_method" value="DELETE">
-  <input type="submit" value="Delete">
-</form>
-<a href="/">Cancel</a>
+<!-- Delete User Form -->
+<div class="container">
+  <h2>Delete User</h2>
+  <form th:action="@{/users/delete}" method="post">
+    <input type="hidden" name="_method" value="DELETE">
+    <div class="form-group">
+      <label for="password">Enter Your Password:</label>
+      <input type="password" id="password" name="password" class="form-control" placeholder="Enter Your Password" required>
+    </div>
+    <button type="submit" class="btn btn-danger">Delete</button>
+    <a href="/" class="btn btn-secondary">Cancel</a>
+  </form>
+</div>
 
-<!--    footer -->
+<!-- Footer -->
 <div th:replace="fragments/footer :: footer"></div>
+
+<!-- Scripts -->
+<script src="../static/js/jquery-3.1.1.min.js" th:href="@{/js/jquery-3.1.1.min.js}"></script>
+<script src="../static/js/bootstrap.min.js" th:href="@{/js/bootstrap.min.js}"></script>
+<script src="../static/js/npm.js" th:href="@{/js/npm.js}"></script>
 </body>
 </html>
